# andybp85.github.io

./: .beans.yml  .gitignore  .gitmodules  CNAME  Dockerfile  README.md  __main__.py  _code.css  _sub-nav.css  blog.json  components.js  docker-compose.yml  home.css  home.md  index.html  service-worker-index.html  service-worker.js  setup.sh  styles.css
about/: about.css  (+1 more)
src/: .gitignore  __main__.py  blog_index_template.html  build.py  home.md  post_template.html  pre-commit  pyproject.toml  pytest.ini  requirements.txt  serve.py  setup.sh  sub-nav.sass  subnav_template.html  template.html  test.py  test_build.py  test_serve.py
src/builder/: build.py  serve.py
src/fixtures/: test_template.html
src/pages/: 00-global.sass  01-header.sass  01-light.sass  02-footer.sass  02-header.sass  03-light.sass  header.sass  home.md  home.sass
src/pages/about/: about.md  about.sass
src/pages/blog/: blog.md  blog.sass
src/pages/blog/tips-for-waking-up-far-far-too-early/: tips-for-waking-up-far-far-too-early.md  tips-for-waking-up-far-far-too-early.sass
src/pages/projects/: projects.md  projects.sass
src/posts/: cutting-claude-code-token-use.md  stop-hardcoding-dev-paths-in-crypttab.md  thoughts-after-two-weeks-with-until-the-sun-explodes.md  web-dev-roadmap.md
src/sass/: 01-light.sass  global.sass  header.sass
src/sass-partials/: _breakpoints.sass  _code.sass  _sub-nav.sass
src/test/: test_build.py  test_serve.py
src/test/pages/: 02.sass
src/test/pages/blog/: blog.sass
src/test/sass-partials/: _test.sass
src/test/src/: excludeMe.sass  template.html
(+113 files in other folders)
