[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project]
dependencies = [
    "markdown>=3.6",
    "pygments>=2.18",
]
description = "Builds the blog from markdown and serves the site locally."
name = "builder"
requires-python = ">=3.12"
version = "1.0.0"

[project.scripts]
build = "builder.build:main"
serve = "builder.serve:main"

[tool.hatch.build.targets.wheel]
packages = ["builder"]

[tool.pytest.ini_options]
testpaths = ["test"]
